--- a/Distributed Constraint Satisfaction/.vscode/settings.json
+++ b/Distributed Constraint Satisfaction/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "vector": "cpp",
-        "functional": "cpp"
+        "functional": "cpp",
+        "stdexcept": "cpp"
     }
 }
